[gd_scene load_steps=6 format=3 uid="uid://dtgoqskqwm3vw"]

[ext_resource type="Script" path="res://Scripts/scarf.gd" id="1_ui11a"]
[ext_resource type="Texture2D" uid="uid://dclefryah00jb" path="res://Assets/KnittingNeedles/AnimatedNeedle01_Pink_Tiny.png" id="2_thkod"]
[ext_resource type="Texture2D" uid="uid://bajd2wc8q0u33" path="res://Assets/KnittingNeedles/AnimatedNeedle02_Pink_Tiny.png" id="3_kchjb"]
[ext_resource type="AudioStream" uid="uid://bxxylohgw52pr" path="res://Assets/audio/knitting_sound.wav" id="4_27i2t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yseoh"]

[node name="scarf" type="Node2D"]
script = ExtResource("1_ui11a")

[node name="head" type="Area2D" parent="."]

[node name="needles_sprite_01" type="Sprite2D" parent="head"]
position = Vector2(0, 8)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_thkod")

[node name="needles_sprite_02" type="Sprite2D" parent="head"]
visible = false
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_kchjb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="head"]
position = Vector2(3, 10)
scale = Vector2(2.8, 2.8)
shape = SubResource("CircleShape2D_yseoh")

[node name="knit_sound" type="AudioStreamPlayer2D" parent="head"]
stream = ExtResource("4_27i2t")
volume_db = -10.895
pitch_scale = 0.7
